vendor/registry-40351f815f426200/remain/tests/ui/match-stable.stderr
error: E::Bbb should sort before E::Ccc
  --> $DIR/match-stable.rs:17:9
   |
17 |         E::Bbb(_, _) => {}
   |         ^^^^^^
